# discord-jp-sentence-patterns

./: README.md  main.py  pyproject.toml  requirements.txt  test_daily_db.py  test_generation.py
bot/: config.py
bot/cogs/: daily.py  grammar.py  help.py  vocab.py
bot/services/: db.py  dictionary.py  llm.py
misc/: conversation_patterns.md  seed_row.json
sql/: indexes.sql  seed.sql  seed_grammar_patterns.sql  shortcuts.sql  sql_snippets.sql  usage_history.sql
sql/rls/: 1_turn_on_rls.sql  2_active_vocab.sql  3_example_phrases.sql  4_grammar_patterns.sql  5_usage_history.sql
sql/schema/: active_vocab_table.sql  example_phrases_table.sql  grammar_patterns_table.sql  indexes.sql
